# django-sqids

./: README.md  pyproject.toml
.github/workflows/: test-mysql.yml  test-pg.yml  test.yml
django_sqids/: __init__.py  exceptions.py  field.py  generate_random_alphabet.py
tests/: settings.py  test_django_sqids.py  urls.py
tests/test_app/: admin.py  models.py  views.py
tests/test_app/templates/test_app/: testmodel.html
