[tool.poetry]
name = "django-sqids"
version = "0.1.0"
readme = "README.md"
description = "Non-intrusive sqids library for Django"
homepage = "https://github.com/julianwachholz/django-sqids"
repository = "https://github.com/julianwachholz/django-sqids"
keywords = ["django", "sqids", "sqid", "hashids", "hashid"]
authors = ["Julian Wachholz <julian@wachholz.ch>", "Shen Li <dustet@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<4"
sqids = ">=0.4.1"

[tool.poetry.dev-dependencies]
django = "^3.0.7"
pytest = "^6.2.5"
black = "^22.0.3"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
flake8 = "^3.8.3"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
